--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,8 @@ button {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.social-list .link:hover {
+.social-list .link:hover,
+.social-list .link:focus {
   background-color: var(--blue-text);
 }
 
@@ -382,7 +383,8 @@ button {
   color: var(--icon-color);
 }
 
-.team-social-list .link:hover {
+.team-social-list .link:hover,
+.team-social-list .link:focus {
   color: var(--text-white);
   background-color: var(--blue-text);
 }
