--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,7 @@ button {
 .link:hover,
 .link:focus {
   color: var(--blue-text);
+  outline: none;
 }
 
 .nav-list > .item:not(:first-child),
@@ -129,6 +130,7 @@ button {
 .link-mail:hover,
 .link-mail:focus {
   color: var(--blue-text);
+  outline: none;
 }
 
 /* стили для footer*/
@@ -436,6 +438,7 @@ button {
   line-height: 1.62;
   letter-spacing: 0.03em;
   background-color: var(--btn-color);
+  outline: none;
 }
 
 .portfolio-btn:hover,
@@ -446,7 +449,8 @@ button {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.portfolio-card > .item:hover {
+.portfolio-card .item:hover,
+.portfolio-card .item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
