добавлено жирность для шапки

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ button {
 
 .link-mail {
   color: var(--gray-text);
+  font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
